Test version modified